// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should disable clusters option when clustering is not supported 1`] = `
<Fragment>
  <EuiTitle
    size="xs"
  >
    <h5>
      <FormattedMessage
        defaultMessage="Scaling"
        id="xpack.maps.esSearch.scaleTitle"
        values={Object {}}
      />
    </h5>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <div>
      <EuiRadio
        checked={true}
        id="LIMIT"
        label="Limit results to 10000."
        onChange={[Function]}
      />
      <EuiRadio
        checked={false}
        id="TOP_HITS"
        label="Show top hits per entity."
        onChange={[Function]}
      />
      <EuiToolTip
        content="Simulated clustering disabled"
        delay="regular"
        position="left"
      >
        <EuiRadio
          checked={false}
          disabled={true}
          id="CLUSTERS"
          label="Show clusters when results exceed 10000."
          onChange={[Function]}
        />
      </EuiToolTip>
    </div>
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiSwitch
      checked={true}
      compressed={true}
      label="Dynamically filter for data in the visible map area"
      onChange={[Function]}
    />
  </EuiFormRow>
</Fragment>
`;

exports[`should render 1`] = `
<Fragment>
  <EuiTitle
    size="xs"
  >
    <h5>
      <FormattedMessage
        defaultMessage="Scaling"
        id="xpack.maps.esSearch.scaleTitle"
        values={Object {}}
      />
    </h5>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <div>
      <EuiRadio
        checked={true}
        id="LIMIT"
        label="Limit results to 10000."
        onChange={[Function]}
      />
      <EuiRadio
        checked={false}
        id="TOP_HITS"
        label="Show top hits per entity."
        onChange={[Function]}
      />
      <EuiRadio
        checked={false}
        disabled={false}
        id="CLUSTERS"
        label="Show clusters when results exceed 10000."
        onChange={[Function]}
      />
    </div>
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiSwitch
      checked={true}
      compressed={true}
      label="Dynamically filter for data in the visible map area"
      onChange={[Function]}
    />
  </EuiFormRow>
</Fragment>
`;

exports[`should render top hits form when scaling type is TOP_HITS 1`] = `
<Fragment>
  <EuiTitle
    size="xs"
  >
    <h5>
      <FormattedMessage
        defaultMessage="Scaling"
        id="xpack.maps.esSearch.scaleTitle"
        values={Object {}}
      />
    </h5>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <div>
      <EuiRadio
        checked={false}
        id="LIMIT"
        label="Limit results to 10000."
        onChange={[Function]}
      />
      <EuiRadio
        checked={true}
        id="TOP_HITS"
        label="Show top hits per entity."
        onChange={[Function]}
      />
      <EuiRadio
        checked={false}
        disabled={false}
        id="CLUSTERS"
        label="Show clusters when results exceed 10000."
        onChange={[Function]}
      />
    </div>
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiSwitch
      checked={true}
      compressed={true}
      label="Dynamically filter for data in the visible map area"
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiHorizontalRule
    margin="xs"
  />
  <EuiFormRow
    describedByIds={Array []}
    display="columnCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Entity"
    labelType="label"
  >
    <SingleFieldSelect
      compressed={true}
      fields={Array []}
      isClearable={false}
      onChange={[Function]}
      placeholder="Select entity field"
      value={null}
    />
  </EuiFormRow>
</Fragment>
`;
